Fix color issues & add input 'required' into HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
      <div class="todo__body">
       <form action="#" class="todo__form" id="form">
-       <input type="text" class="todo__input" id='input'>
+       <input type="text" class="todo__input" id='input' required>
        <div class="todo__wrap-buttons">
          <input type='submit' value="Enter" class="todo__enter btn" id="enter">
          <button class="todo__reset btn">Reset</button>
