--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
        <input type="text" class="todo__input" id='input' required>
        <div class="todo__wrap-buttons">
          <input type='submit' value="Enter" class="todo__enter btn" id="enter">
-         <button class="todo__reset btn">Reset</button>
+         <button type="reset" class="todo__reset btn">Reset</button>
        </div>
       </form>
       <div class="todo__list">
 <!--      todo items-->
       </div>
      </div>
+    <footer class="todo__footer">Thanks to TraversyMedia for example of working with Vanilla JS classes</footer>
    </div>
  </main>
  <script src="main-1.js"></script>
